<resources>
    <string name="app_name">CacheAway</string>

    <string name="quick_clean">This will clean all default cache directories and files in just one click. To select which caches to delete, open settings.\n\nBelow is advance clean option to delete caches manually.</string>
    <string name="quick_clean_customized">This will clean your selected cache directories and files in just one click.\n\nBelow is advance clean option to delete caches manually.</string>

    <string name="quick_clean_toast_default">All default caches cleaned</string>
    <string name="quick_clean_toast_customized">All selected caches cleaned</string>

    <string name="btn_quick_clean">Clean\nAll</string>
    <string name="btn_advance_clean">Advance Clean</string>
    <string name="box_01">Dalvik/ART Cache</string>
    <string name="box_02">Cache Partition</string>
    <string name="box_03">Application Cache</string>
    <string name="box_04">Temporary files</string>
    <string name="box_05">Logs Cache</string>
    <string name="box_06">Logger Cache</string>
    <string name="box_07">Dropbox Cache</string>
    <string name="box_08">Tombstone Cache</string>
    <string name="box_09">Usage Stats</string>
    <string name="box_10">ANR Cache</string>
    <string name="box_11">LOST.DIR Cache</string>
    <string name="box_12">Thumbnails Cache</string>

    <string name="developer">Developed with ❤ by chankruze</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="caches_header">Clean all button</string>

    <!-- Clean All Preferences -->
    <string name="customize_clean_all_key" translatable="false">customizeCleanAll</string>
    <string name="customize_clean_all_title">Customize clean all option</string>
    <string name="customize_clean_all_summary_on">Cleans only selected shits</string>
    <string name="customize_clean_all_summary_off">Just cleans all the shits</string>
    <string name="settings_clean_all_default"></string>

    <!-- Select Caches Preferences -->
    <string name="select_caches_title">Select caches to clean</string>
    <string name="select_caches_key" translatable="false">selectedCaches</string>

    <!-- Notification Preference -->
    <string name="notification_pref_key">notificationPref</string>
    <string name="notification_pref_title">Notify to configure clan all button</string>
    <string name="notification_pref_summary_on">Notify if customize clean all option is disabled</string>
    <string name="notification_pref_summary_off">Don\'t notify if customize clean all option is disabled</string>

    <!-- Notification -->
    <string name="channel_name">CacheAway settings</string>
    <string name="channel_description">Notify user to configure caches option in settings</string>
    <string name="notificationTitle">Configure Clan All Button</string>
    <string name="notificationContent">You can now select caches of your choice to clean when CLEAN ALL is pressed. Enable customize clean all option and select caches to clean in settings.\n\nNote: Leaving empty list will clean all caches</string>
    <string name="configure">Configure now</string>

    <!-- Image Button Description -->
    <string name="btn_desc_settings">Open settings</string>
    <string name="btn_desc_close">Close</string>
    <string name="btn_desc_info">Info</string>
    <string name="btn_desc_github">GitHub Url</string>
    <string name="btn_desc_web">Website</string>
    <string name="btn_desc_mail">Contact</string>
    <string name="btn_desc_share">Share App</string>

</resources>
